[gd_scene load_steps=25 format=2]

[ext_resource path="res://UI_Elements/originDescriptionBox.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Gruppo-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/DiseasePage/DiseaseStep.gd" type="Script" id=3]
[ext_resource path="res://UI_Elements/SkillBoxBorderBig.png" type="Texture" id=7]
[ext_resource path="res://UI_Elements/SkillBoxBorder.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=6]
size = 26
outline_size = 2
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=22]
size = 24
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=19]
size = 30
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=23]
size = 24
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=20]
size = 28
outline_size = 2
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 470, 200 )
modulate_color = Color( 0, 0.937255, 0.0823529, 1 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 470, 200 )
modulate_color = Color( 0, 0.262745, 0.00784314, 1 )

[sub_resource type="DynamicFont" id=21]
size = 28
outline_size = 2
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 470, 200 )
modulate_color = Color( 0, 0.937255, 0.0823529, 1 )

[sub_resource type="StyleBoxTexture" id=18]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 470, 200 )
modulate_color = Color( 0, 0.262745, 0.00784314, 1 )

[sub_resource type="DynamicFont" id=14]
size = 40
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 48
outline_size = 4
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 470, 200 )
modulate_color = Color( 0, 0.937255, 0.0823529, 1 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 470, 200 )
modulate_color = Color( 0, 0.262745, 0.00784314, 1 )

[node name="DiseaseStep" type="Control"]
anchor_left = 0.0104167
anchor_top = 0.0185185
anchor_right = 0.979167
anchor_bottom = 0.884259
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.0365591
anchor_top = 0.0245989
anchor_right = 0.990323
anchor_bottom = 1.05134
margin_left = -2.99995
margin_top = 3.62396e-05
margin_right = -0.0012207
margin_bottom = -0.00256348
texture = ExtResource( 1 )
expand = true

[node name="SelectDisease" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="SelectDisease"]
modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.119355
anchor_top = 0.116578
anchor_right = 0.303763
anchor_bottom = 0.187166
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "available_tricks"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="SelectDisease"]
modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.110215
anchor_top = 0.142246
anchor_right = 0.297849
anchor_bottom = 0.193583
margin_top = -1.52588e-05
margin_bottom = -1.52588e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="SelectDisease"]
anchor_left = 0.110753
anchor_top = 0.188235
anchor_right = 0.310215
anchor_bottom = 0.91123
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TricksList" type="GridContainer" parent="SelectDisease/ScrollContainer"]
unique_name_in_owner = true

[node name="DiseaseName" type="Label" parent="SelectDisease"]
anchor_left = 0.445695
anchor_top = 0.122917
anchor_right = 0.895892
anchor_bottom = 0.219792
margin_left = 26.0071
margin_top = 25.073
margin_right = 26.0071
margin_bottom = 25.073
custom_colors/font_color = Color( 0, 0.717647, 0.0392157, 1 )
custom_fonts/font = SubResource( 3 )
text = "NAME OF THE DISEASE"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator2" type="HSeparator" parent="SelectDisease"]
modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.45076
anchor_top = 0.202083
anchor_right = 0.89758
anchor_bottom = 0.253125
margin_left = 25.5867
margin_top = 27.0521
margin_right = 25.5867
margin_bottom = 27.0521
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DescriptionHeadline" type="Label" parent="SelectDisease"]
anchor_left = 0.453011
anchor_top = 0.251042
anchor_right = 0.708365
anchor_bottom = 0.304167
margin_left = 25.3998
margin_top = 28.2762
margin_right = 25.3999
margin_bottom = 28.2762
custom_colors/font_color = Color( 0, 0.717647, 0.0392157, 1 )
custom_fonts/font = SubResource( 4 )
text = "DESCRIPTION"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DiseaseDescription" type="RichTextLabel" parent="SelectDisease"]
anchor_left = 0.104284
anchor_top = 0.293749
anchor_right = 0.371477
anchor_bottom = 0.844789
margin_left = 680.032
margin_top = 46.3448
margin_right = 680.032
margin_bottom = 46.3448
text = "TEST DESCRIPTION"

[node name="RolledDiseaseScreen" type="Control" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.29425e-05
margin_top = 2.00002
margin_right = -0.00012207
margin_bottom = 2.0

[node name="DiseaseName" type="Label" parent="RolledDiseaseScreen"]
unique_name_in_owner = true
anchor_left = 0.128114
anchor_top = 0.146524
anchor_right = 0.906017
anchor_bottom = 0.243398
margin_left = -1.52588e-05
custom_colors/font_color = Color( 0, 0.717647, 0.0392157, 1 )
custom_fonts/font = SubResource( 3 )
text = "NAME OF THE DISEASE"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="RolledDiseaseScreen"]
modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.125421
anchor_top = 0.232085
anchor_right = 0.928239
anchor_bottom = 0.283368
margin_left = 1.52588e-05
margin_right = 0.00012207
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DescriptionHeadline" type="Label" parent="RolledDiseaseScreen"]
anchor_left = 0.128653
anchor_top = 0.260962
anchor_right = 0.384007
anchor_bottom = 0.314087
margin_top = -1.52588e-05
custom_colors/font_color = Color( 0, 0.717647, 0.0392157, 1 )
custom_fonts/font = SubResource( 4 )
text = "DESCRIPTION"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DiseaseDescription" type="Label" parent="RolledDiseaseScreen"]
unique_name_in_owner = true
anchor_left = 0.134577
anchor_top = 0.326202
anchor_right = 0.40177
anchor_bottom = 0.877242
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 22 )
text = "TEST DESCRIPTION"

[node name="TextureRect2" type="TextureRect" parent="RolledDiseaseScreen"]
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
anchor_left = 0.458064
anchor_top = 0.259893
anchor_right = 0.89363
anchor_bottom = 0.885934
margin_top = 1.52588e-05
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="RolledDiseaseScreen/TextureRect2"]
anchor_left = 0.0617167
anchor_top = 0.0153755
anchor_right = 1.03314
anchor_bottom = 0.903736
margin_left = -40.0
margin_right = -37.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FirstSymptoms" type="TextureRect" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
margin_right = 790.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/FirstSymptoms"]
anchor_left = 0.0405063
anchor_top = 0.0288462
anchor_right = 0.983544
anchor_bottom = 0.117308
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 19 )
text = "First Symptoms"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/FirstSymptoms"]
self_modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0101266
anchor_top = 0.123077
anchor_right = 0.979747
anchor_bottom = 0.148077
margin_left = 7.0
margin_right = 1.00006
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Description" type="Label" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/FirstSymptoms"]
anchor_left = 0.0164557
anchor_top = 0.153846
anchor_right = 0.983544
anchor_bottom = 0.511538
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/FirstSymptoms"]
anchor_left = 0.039241
anchor_top = 0.553846
anchor_right = 0.982279
anchor_bottom = 0.642307
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 19 )
text = "Penalty:"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator2" type="HSeparator" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/FirstSymptoms"]
self_modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0177215
anchor_top = 0.526923
anchor_right = 0.977215
anchor_bottom = 0.551923
margin_left = 1.0
margin_right = 3.00006
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator3" type="HSeparator" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/FirstSymptoms"]
self_modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0202532
anchor_top = 0.65
anchor_right = 0.977215
anchor_bottom = 0.675
margin_left = -1.0
margin_right = 3.00006
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Penalty" type="Label" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/FirstSymptoms"]
anchor_left = 0.0139241
anchor_top = 0.682692
anchor_right = 0.981013
anchor_bottom = 0.973077
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AcuteCondition" type="TextureRect" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
margin_top = 131.0
margin_right = 790.0
margin_bottom = 258.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/AcuteCondition"]
anchor_left = 0.0405063
anchor_top = 0.0288462
anchor_right = 0.983544
anchor_bottom = 0.117308
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 19 )
text = "Acute Condition"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/AcuteCondition"]
anchor_left = 0.010127
anchor_top = 0.123076
anchor_right = 1.00633
anchor_bottom = 0.148076
margin_right = 6.10352e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Description" type="Label" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/AcuteCondition"]
anchor_left = 0.0164557
anchor_top = 0.153846
anchor_right = 0.983544
anchor_bottom = 0.511538
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/AcuteCondition"]
anchor_left = 0.039241
anchor_top = 0.553846
anchor_right = 0.982279
anchor_bottom = 0.642307
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 19 )
text = "Penalty:"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator2" type="HSeparator" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/AcuteCondition"]
anchor_left = 0.0202536
anchor_top = 0.649999
anchor_right = 1.01646
anchor_bottom = 0.674999
margin_right = 6.10352e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator3" type="HSeparator" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/AcuteCondition"]
anchor_left = 0.017722
anchor_top = 0.526923
anchor_right = 1.01392
anchor_bottom = 0.551923
margin_right = 6.10352e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Penalty" type="Label" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/AcuteCondition"]
anchor_left = 0.0139241
anchor_top = 0.682692
anchor_right = 0.981013
anchor_bottom = 0.973077
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CriticalCondition" type="TextureRect" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
margin_top = 174.0
margin_right = 790.0
margin_bottom = 345.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/CriticalCondition"]
anchor_left = 0.0405063
anchor_top = 0.0288462
anchor_right = 0.983544
anchor_bottom = 0.117308
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 19 )
text = "Critical Condition"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/CriticalCondition"]
anchor_left = 0.010127
anchor_top = 0.123076
anchor_right = 1.00633
anchor_bottom = 0.148076
margin_right = 6.10352e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Description" type="Label" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/CriticalCondition"]
anchor_left = 0.0164557
anchor_top = 0.153846
anchor_right = 0.983544
anchor_bottom = 0.511538
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/CriticalCondition"]
anchor_left = 0.039241
anchor_top = 0.553846
anchor_right = 0.982279
anchor_bottom = 0.642307
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 19 )
text = "Penalty:"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator2" type="HSeparator" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/CriticalCondition"]
anchor_left = 0.0202536
anchor_top = 0.649999
anchor_right = 1.01646
anchor_bottom = 0.674999
margin_right = 6.10352e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator3" type="HSeparator" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/CriticalCondition"]
anchor_left = 0.017722
anchor_top = 0.526923
anchor_right = 1.01392
anchor_bottom = 0.551923
margin_right = 6.10352e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Penalty" type="Label" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/CriticalCondition"]
anchor_left = 0.0139241
anchor_top = 0.682692
anchor_right = 0.981013
anchor_bottom = 0.973077
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TerminalCondition" type="TextureRect" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
margin_top = 262.0
margin_right = 790.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/TerminalCondition"]
anchor_left = 0.0405063
anchor_top = 0.0288462
anchor_right = 0.983544
anchor_bottom = 0.117308
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 19 )
text = "Terminal Condition"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/TerminalCondition"]
anchor_left = 0.010127
anchor_top = 0.123076
anchor_right = 1.00633
anchor_bottom = 0.148076
margin_right = 6.10352e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Description" type="Label" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/TerminalCondition"]
anchor_left = 0.0164557
anchor_top = 0.153846
anchor_right = 0.983544
anchor_bottom = 0.511538
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/TerminalCondition"]
anchor_left = 0.039241
anchor_top = 0.553846
anchor_right = 0.982279
anchor_bottom = 0.642307
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 19 )
text = "Penalty:"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator2" type="HSeparator" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/TerminalCondition"]
anchor_left = 0.0202536
anchor_top = 0.649999
anchor_right = 1.01646
anchor_bottom = 0.674999
margin_right = 6.10352e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator3" type="HSeparator" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/TerminalCondition"]
anchor_left = 0.017722
anchor_top = 0.526923
anchor_right = 1.01392
anchor_bottom = 0.551923
margin_right = 6.10352e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Penalty" type="Label" parent="RolledDiseaseScreen/TextureRect2/VBoxContainer/TerminalCondition"]
anchor_left = 0.0139241
anchor_top = 0.682692
anchor_right = 0.981013
anchor_bottom = 0.973077
margin_bottom = 3.05176e-05
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LowerConditionLevel" type="Button" parent="RolledDiseaseScreen/TextureRect2"]
anchor_left = 0.0246867
anchor_top = 0.910569
anchor_right = 0.29624
anchor_bottom = 0.978905
custom_colors/font_color = Color( 0, 0.717647, 0.0392157, 1 )
custom_fonts/font = SubResource( 20 )
custom_styles/hover = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "PREVIOUS"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HigherConditionLevel" type="Button" parent="RolledDiseaseScreen/TextureRect2"]
anchor_left = 0.70604
anchor_top = 0.913986
anchor_right = 0.977594
anchor_bottom = 0.982321
custom_colors/font_color = Color( 0, 0.717647, 0.0392157, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/hover = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
text = "NEXT"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RollForDiseaseScreen" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.02151
anchor_bottom = 1.04278
margin_right = -40.0
margin_bottom = -40.0

[node name="RollForDiseaseText" type="Label" parent="RollForDiseaseScreen"]
anchor_left = 0.142472
anchor_top = 0.17861
anchor_right = 0.853759
anchor_bottom = 0.678076
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 14 )
text = "disease_step_flavour_description"
autowrap = true

[node name="Button" type="Button" parent="RollForDiseaseScreen"]
margin_left = 677.0
margin_top = 675.0
margin_right = 1206.0
margin_bottom = 834.0
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "Roll for your Disease"

[connection signal="button_up" from="RollForDiseaseScreen/Button" to="." method="_on_Button_button_up"]
